# MIR250-UR5e-Navigation

./: .gitignore  CLAUDE.md  README.md  frames_2026-05-09_00.30.04.gv  frames_2026-05-09_00.30.30.gv  frames_2026-05-09_00.40.01.gv  frames_2026-05-09_00.41.54.gv  frames_2026-05-09_00.43.32.gv  frames_2026-05-09_00.45.11.gv  frames_2026-05-09_00.47.26.gv  frames_2026-05-09_00.47.57.gv  frames_2026-05-09_01.00.41.gv  frames_2026-05-09_15.19.39.gv  frames_2026-05-09_15.22.01.gv
src/merged/: CMakeLists.txt  package.xml
src/merged/config/: mir_ur_controllers.yaml
src/merged/launch/: merged.launch.py
src/merged/rviz/: mir_ur_visu.rviz
src/merged/src/: arm_footprint_projector.cpp
src/merged/urdf/: mir_ur.urdf.xacro
src/mir250_robot_ros2/mir_description/config/: diffdrive_controller.yaml
src/mir250_robot_ros2/mir_description/rviz/: mir_moveit.rviz
src/mir250_robot_ros2/mir_description/urdf/: mir.urdf.xacro  mir_ur.urdf.xacro
src/mir250_robot_ros2/mir_description/urdf/include/: _materials.urdf.xacro  camera_d435.urdf.xacro  mir_250_v2.urdf.xacro  mir_250_v3.urdf.xacro  mir_250_v4.urdf.xacro  proximity_sensor.urdf.xacro
src/mir250_robot_ros2/mir_gazebo/launch/: mir_gazebo_launch.py  mir_ur.launch.py  mixed.launch.py
src/mir250_robot_ros2/mir_gazebo/launch/include/: mir_gazebo_common.py
src/mir250_robot_ros2/mir_gazebo/maps/: maze2.pgm
src/mir250_robot_ros2/mir_navigation/config/: mir_mapping_async_sim_mir_prefix.yaml  mir_nav_dyn_params.yaml  mir_nav_params.yaml
src/mir250_robot_ros2/mir_navigation/launch/include/: amcl.py  navigation.py
src/ue/Universal_Robots_ROS2_Description/urdf/: ur.urdf.xacro
src/ue/ur_simulation_gazebo/config/: ur_controllers.yaml
src/ue/ur_simulation_gazebo/launch/: ur_sim_control.launch.py  ur_sim_moveit.launch.py
